Bug 117628 - Crash after closing Media Player after opening and applying file (kde4 and gen)
Summary: Crash after closing Media Player after opening and applying file (kde4 and gen)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.4.2 release
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.1.0.1 target:6.2.0 target:6.0.5
Keywords: haveBacktrace
Depends on:
Blocks: Media-Player-Dialog
  Show dependency treegraph
 
Reported: 2018-05-15 19:16 UTC by Buovjaga
Modified: 2018-05-29 19:47 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["libc-2.26.so"]


Attachments
Backtrace of crash from master, gen backend (23.45 KB, text/plain)
2018-05-15 19:16 UTC, Buovjaga
Details
Short wav file for testing (123.71 KB, audio/x-wav)
2018-05-15 19:18 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2018-05-15 19:16:32 UTC
Created attachment 142119 [details]
Backtrace of crash from master, gen backend

1. Open Impress
2. Tools - Media player
3. Open a media file (do not apply immediately)
4. Apply the file
5. Close Media player

The crash does not happen, if instead of opening, you apply the file immediately.

Does not happen on Windows or gtk2 or gtk3.

Arch Linux 64-bit
Version: 6.0.4.2
Build ID: 6.0.4-1
CPU threads: 8; OS: Linux 4.16; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group

Arch Linux 64-bit
Version: 6.1.0.0.alpha1+
Build ID: 21b11273ae91f0cf7fd5f3f9fd2168e4349852c4
CPU threads: 8; OS: Linux 4.16; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on May 11th 2018
Comment 1 Buovjaga 2018-05-15 19:18:42 UTC
Created attachment 142120 [details]
Short wav file for testing

Note for testers: to test different VCL backends, launch from the command line with
SAL_USE_VCLPLUGIN=gen libreoffice
SAL_USE_VCLPLUGIN=gtk libreoffice

and so forth
Comment 2 Julien Nabet 2018-05-15 20:53:36 UTC
On pc Debian x86-64 with master sources updated today, I confirmed I could reproduce this with gen rendering and not with gtk3
Comment 3 Julien Nabet 2018-05-16 19:24:17 UTC
Caolán: thought you might be interested in this one since the conversion of this dialog in weld way may help here (at least for master branch)

Here's a code pointer:
https://opengrok.libreoffice.org/xref/core/avmedia/source/framework/mediaplayer.cxx#60
Comment 4 Caolán McNamara 2018-05-28 09:50:15 UTC
I can reproduce this and have a fix
Comment 5 Commit Notification 2018-05-28 13:59:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=20c6ab6b492d360faafeb857ef51bc0da5f645f6&h=libreoffice-6-1

tdf#117628 crash after closing media player with X11 backend

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2018-05-28 14:14:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5fde838b561924208dacd4a3f4ce5df6c7ea4661

tdf#117628 crash after closing media player with X11 backend

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2018-05-28 14:14:47 UTC
6-0 backport in gerrit
Comment 8 Commit Notification 2018-05-29 19:47:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d9c5e7f4aef8da58b2b59e3259d1704296648cbf&h=libreoffice-6-0

tdf#117628 crash after closing media player with X11 backend

It will be available in 6.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.