tdf#117628 crash after closing media player with X11 backend

Change-Id: I812da5ddf7343573f93ea64e592442edb31cad2d
Reviewed-on: https://gerrit.libreoffice.org/54912
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>